--- a/styles/index.less
+++ b/styles/index.less
@@ -1,2 +1,338 @@
 @import url(reset.css);
 @import url(variaveis.less);
+
+.flex{
+    display: flex;
+}
+
+.title{
+    font-size: 2em;
+    padding: 0.8em 0;
+    color: @black;
+    font-weight: 600;
+    font-family: @montserrat;
+}
+
+.container{
+    width: 100%;
+    .content{
+        width: 920px;
+        margin: 0 auto;
+
+        header{
+            height: auto;
+            padding: 1em 0;
+            nav{
+                align-items: center;
+                justify-content: space-between;
+                h2{
+                    font-size: 1.5em;
+                    font-weight: 700;
+                    font-family: @montserrat;
+                    color: @black;
+
+                    .redd{
+                        color: @red;
+                    }
+                    .grein{
+                        color: #7ba428;
+                    }
+                }
+
+                ul{
+                    align-items: center;
+                    gap: 20px;
+                    li{
+                        color: @black;
+                        font-family: @inter;
+                        font-weight: 500;
+                        font-size: 1em;
+                        cursor: pointer;
+                    }                    
+                }
+
+                a{
+                    color: @black;
+                    border: 1px solid @black;
+                    border-radius: 10px;
+                    width: 180px;
+                    height: 40px;
+                    text-align: center;
+                    padding: 10px;
+                    font-family: @inter;
+                    font-weight: 600;
+                    background-color: transparent;
+                }
+            }
+        }
+
+        .one{
+            height: auto;
+            padding: 2em 0;
+            align-items: center;
+            justify-content: space-between;
+
+            .content-text{
+                text-align: left;                       
+
+                p{
+                    color: @black;
+                    font-weight: 400;
+                    font-family: @inter;
+                    font-size: 1em;
+                    padding-bottom: 1em;
+                    line-height: 160%;
+                }
+
+                .btn{
+                    color: @white-2;
+                    font-family: @inter;
+                    font-weight: 500;
+                    border-radius: 10px;
+                    background-color: @red;
+                    text-align: center;
+                    font-size: 1em;
+                    width: 220px;
+                    height: 40px;                   
+                }
+            }
+
+            .img{
+                img{
+                    width: 300px;
+                    height: 400px;
+                }
+            }
+        }
+
+        .two{
+            height: auto;
+            padding: 2em 0;
+            align-items: center;
+            justify-content: space-between;
+
+            .box-img{
+                img{
+                    width: 400px;
+                    height: 280px;
+                }
+            }
+
+            .box-title{
+
+
+                p{
+                    color: @black;
+                    font-size: 1em;
+                    font-family: @inter;
+                    font-weight: 400;                    
+                    line-height: 160%;
+                    padding-bottom: 0.8em;                 
+                }
+
+                a{
+                    color: @red;
+                    font-family: @inter;
+                    font-weight: 500;
+                    text-decoration: underline;
+                    font-size: 1.5rem;
+                }
+            }
+        }
+
+        .three{
+            height: auto;
+            padding: 2em 0;
+
+            h2{
+                text-align: center;
+            }
+
+            .contentOptions{
+                align-items: center;
+                justify-content: space-between;
+                margin-top: 4em;
+
+                .card{
+                    background-color: @white-3;
+                    position: relative;
+                    height: 320px;
+                    width: 300px;
+                    border-radius: 32px;                    
+                    padding: 1em;
+
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+
+                    img{
+                        position: absolute;
+                        width: 200px;
+                        height: 200px;
+                        top: -50px;
+                        left: 50px;
+                    }
+
+                    .infos{
+                        
+                        text-align: center;
+                        color: @black;
+
+                        .name{                           
+                            font-size: 2.5rem;
+                            font-weight: 500;
+                            padding-top: 5em;
+                            font-family: @montserrat;
+                        }
+                        .description{
+                            font-size: 1.2rem;
+                            color: @gray;
+                            font-family: @inter;
+                            padding: 1em;
+                            padding-bottom: 2em;
+                        }
+
+                        .price{
+                            font-size: 2.5rem;
+                            font-family: @montserrat;
+                            font-weight: 500;
+                        }
+                    }
+                }
+
+            }
+        }
+
+        .four{
+            height: auto;
+            padding: 1em 0;
+
+            h2{
+                text-align: left;
+            }
+            .feedbacks{
+                align-items: center;
+                justify-content: space-between;
+
+                .card{
+                    background-color: @white-3;
+                    border-radius: 32px;
+                    width: 430px;
+                    height: 240px;
+                    padding: 1em;
+                    display:flex;
+                    flex-direction: column;
+                    gap: 15px;
+                    img{
+                        width: 50px;
+                        height:50px;
+                    }
+
+                    .name{
+                        color: @black;
+                        font-family: @montserrat;
+                        font-weight: 500;
+                        
+                    }
+
+                    .res{
+                        color: @gray;
+                        font-family: @inter;
+                        font-weight: 400;
+                    }
+
+                    .classification{
+                        background-image: url(../assets/img/Vector.png);
+                        width: 100px;
+                        height: 18px;
+                        background-position: center;
+                        background-repeat: repeat;
+                        background-size: 20%;
+                    }
+                }
+
+            }
+        }
+
+        .five{
+            .box-search{
+                justify-content: center;
+                position: relative;
+                padding: 1em 0 ;
+
+                .icon, button{
+                    position: absolute;
+                }
+
+                .icon{
+                    width: 20px;
+                    height: 20px;
+                    left: 224px;
+                    top: 25px;
+                }
+
+                input{
+                    border: 1px solid #292929;
+                    width: 500px;
+                    height: 40px;
+                    background-color: transparent;
+                    padding-left: 50px;
+                    border-radius: 10px 0px 0px 10px;
+                }
+
+                button{
+                    border-radius: 0px 10px 10px 0px;
+                    background-color: @red;
+                    color: @white-2;
+                    width: 183px;
+                    height: 40px;
+                    text-align: center;
+                    right: 100px;
+                }
+            }
+        }
+
+        footer{
+            height: auto;
+            padding: 2em 0;
+            gap: 60px;
+            flex-wrap: wrap;
+            h2{
+                font-size: 1.5em;
+                font-weight: 700;
+                font-family: @montserrat;
+                color: @black;
+
+                .redd{
+                    color: @red;
+                }
+                .grein{
+                    color: #7ba428;
+                }
+            }
+
+            ul{
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                text-align: left;
+                
+
+                li:first-of-type{
+                   font-weight: bold;
+                   font-family: @montserrat;
+                   color: @black;
+                   font-size: 1.5em;
+                }
+
+
+                li{
+                    font-family: Roboto;
+                    font-weight: 400;
+                    font-size: 0.7em;
+                    color: @gray;
+                }
+            }
+        }
+    }
+}
